feat(business): redesign step 1 form with Material-UI and enhanced preview
- Replace custom form layout with Material-UI components (TextField, Select, Chip, etc.)
- Add real-time preview panel showing business card with entered data
- Implement keyword management system with add/remove functionality (max 10 keywords)
- Add table count field to business form
- Integrate bilingual support with useTranslation hook and dynamic locale switching
- Add locale state management with URL synchronization
- Improve

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -763,6 +763,33 @@
     "errorTitle": "Error Loading Claim",
     "errorMessage": "Claim not found"
   },
+  "businessForm": {
+    "step1Title": "Register Your Restaurant's Basic Information",
+    "step1Subtitle": "Add your business information in detail. Your business page will not appear in search results until this information is verified by the admin. Once approved, you will receive an email notification and can then link your business.",
+    "phoneLabel": "Phone Number",
+    "emailLabel": "Email Address",
+    "businessNameLabel": "Website Address (Optional)",
+    "tableCountLabel": "Number of Tables",
+    "tableCountPlaceholder": "50 tables",
+    "categoryLabel": "Restaurant Category",
+    "categoryPlaceholder": "Choose your restaurant category",
+    "categoryRestaurant": "Restaurants",
+    "categoryCafe": "Cafe",
+    "categoryBakery": "Bakery",
+    "categorySweets": "Sweets",
+    "keywordsLabel": "Keywords",
+    "keywordsPlaceholder": "burger",
+    "addButton": "Add",
+    "submitButton": "Continue",
+    "validationError": "Please complete all required fields (Name, Phone, Category)",
+    "saveError": "An error occurred while saving data. Please try again.",
+    "previewBusinessName": "Restaurant Name",
+    "previewPhone": "Phone Number",
+    "previewEmail": "Email Address",
+    "previewTableCount": "Number of Tables",
+    "previewCategory": "Restaurant Category",
+    "previewKeywords": "Keywords"
+  },
   "admin": {
     "claimsTitle": "Business Claims Review",
     "claimsSubtitle": "Review and approve business claim requests",
