--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -731,41 +731,68 @@
     "tagline": "إدارة عملك بسهولة"
   },
   "claims": {
-  "title": "طلبات المطالبة الخاصة بي",
-  "subtitle": "تتبع حالة طلبات المطالبة بالأعمال الخاصة بك",
-  "backToSearch": "العودة للبحث",
-  "createClaim": "إنشاء طلب جديد",
-  "noClaims": "لا توجد طلبات بعد",
-  "noClaimsDescription": "لم تقم بتقديم أي طلبات مطالبة بعد",
-  "tableBusinessName": "اسم النشاط التجاري",
-  "tableStatus": "الحالة",
-  "tableSubmitted": "تاريخ التقديم",
-  "tableActions": "الإجراءات",
-  "viewDetails": "عرض التفاصيل",
-  "statusPending": "قيد المراجعة",
-  "statusApproved": "تمت الموافقة",
-  "statusRejected": "مرفوض",
-  "statusUnspecified": "غير محدد",
-  "detailTitle": "تفاصيل طلب المطالبة",
-  "claimId": "رقم الطلب",
-  "statusTitle": "الحالة",
-  "pendingMessage": "طلبك قيد المراجعة حالياً. سنقوم بإخطارك بمجرد معالجته.",
-  "approvedMessage": "تهانينا! تمت الموافقة على طلبك. يمكنك الآن إدارة نشاطك التجاري.",
-  "rejectedMessage": "تم رفض طلبك. يرجى مراجعة السبب أدناه وتقديم طلب جديد إذا لزم الأمر.",
-  "submittedOn": "تاريخ التقديم",
-  "reviewedOn": "تاريخ المراجعة",
-  "reviewedBy": "تمت المراجعة بواسطة",
-  "businessId": "معرف النشاط التجاري",
-  "viewBusiness": "عرض لوحة التحكم",
-  "evidence": "الأدلة الداعمة",
-  "backToClaims": "العودة للطلبات",
-  "submitNewClaim": "تقديم طلب جديد",
-  "errorTitle": "خطأ في تحميل الطلب",
-  "errorMessage": "الطلب غير موجود"
-},
-"admin": {
-  "claimsTitle": "مراجعة طلبات الأعمال",
-  "claimsSubtitle": "مراجعة والموافقة على طلبات المطالبة بالأعمال",
-  "noClaims": "لا توجد طلبات في هذه الفئة"
-}
+    "title": "طلبات المطالبة الخاصة بي",
+    "subtitle": "تتبع حالة طلبات المطالبة بالأعمال الخاصة بك",
+    "backToSearch": "العودة للبحث",
+    "createClaim": "إنشاء طلب جديد",
+    "noClaims": "لا توجد طلبات بعد",
+    "noClaimsDescription": "لم تقم بتقديم أي طلبات مطالبة بعد",
+    "tableBusinessName": "اسم النشاط التجاري",
+    "tableStatus": "الحالة",
+    "tableSubmitted": "تاريخ التقديم",
+    "tableActions": "الإجراءات",
+    "viewDetails": "عرض التفاصيل",
+    "statusPending": "قيد المراجعة",
+    "statusApproved": "تمت الموافقة",
+    "statusRejected": "مرفوض",
+    "statusUnspecified": "غير محدد",
+    "detailTitle": "تفاصيل طلب المطالبة",
+    "claimId": "رقم الطلب",
+    "statusTitle": "الحالة",
+    "pendingMessage": "طلبك قيد المراجعة حالياً. سنقوم بإخطارك بمجرد معالجته.",
+    "approvedMessage": "تهانينا! تمت الموافقة على طلبك. يمكنك الآن إدارة نشاطك التجاري.",
+    "rejectedMessage": "تم رفض طلبك. يرجى مراجعة السبب أدناه وتقديم طلب جديد إذا لزم الأمر.",
+    "submittedOn": "تاريخ التقديم",
+    "reviewedOn": "تاريخ المراجعة",
+    "reviewedBy": "تمت المراجعة بواسطة",
+    "businessId": "معرف النشاط التجاري",
+    "viewBusiness": "عرض لوحة التحكم",
+    "evidence": "الأدلة الداعمة",
+    "backToClaims": "العودة للطلبات",
+    "submitNewClaim": "تقديم طلب جديد",
+    "errorTitle": "خطأ في تحميل الطلب",
+    "errorMessage": "الطلب غير موجود"
+  },
+  "businessForm": {
+    "step1Title": "سجـل بيانات مطعمـك الأساسيـة",
+    "step1Subtitle": "قم بإضافة معلومات البيزنس الخاص بك بالتفصيل. صفحة البيزنس الخاص بك لن تظهر في نتائج البحث حتى يتم التحقق من هذه المعلومات من الأدمن، بمجرد الموافقة عليها سيرسل لك ايميل يفيد بالموافقة وبعدها يمكنك ربط البيزنس الخاص بك.",
+    "phoneLabel": "رقم الهاتف",
+    "emailLabel": "البريد الإلكتروني",
+    "businessNameLabel": "عنوان مواقعك الإلكتروني (اختياري)",
+    "tableCountLabel": "عدد الطاولات",
+    "tableCountPlaceholder": "50 طاولة",
+    "categoryLabel": "تصنيف مطعمك",
+    "categoryPlaceholder": "اختر تصنيف مطعمك",
+    "categoryRestaurant": "مطاعم",
+    "categoryCafe": "كافيه",
+    "categoryBakery": "مخبز",
+    "categorySweets": "حلويات",
+    "keywordsLabel": "الكلمات المفتاحية",
+    "keywordsPlaceholder": "برجر",
+    "addButton": "إضافة",
+    "submitButton": "إستمـرار",
+    "validationError": "الرجاء إكمال جميع الحقول المطلوبة (الاسم، رقم الهاتف، الفئة)",
+    "saveError": "حدث خطأ أثناء حفظ البيانات. الرجاء المحاولة مرة أخرى.",
+    "previewBusinessName": "اسم المطعم",
+    "previewPhone": "رقم الهاتف",
+    "previewEmail": "البريد الإلكتروني",
+    "previewTableCount": "عدد الطاولات",
+    "previewCategory": "تصنيف مطعمك",
+    "previewKeywords": "الكلمات المفتاحية"
+  },
+  "admin": {
+    "claimsTitle": "مراجعة طلبات الأعمال",
+    "claimsSubtitle": "مراجعة والموافقة على طلبات المطالبة بالأعمال",
+    "noClaims": "لا توجد طلبات في هذه الفئة"
+  }
 }
