``` refactor(business): redesign step 2 location form with Material-UI and interactive map
- Replace custom form layout with Material-UI components (Box, TextField, Button, Typography)
- Add interactive map preview with marker, grid pattern, and route visualization
- Implement map controls (confirm/edit location buttons) with bilingual support
- Add real-time locale switching with URL synchronization and popstate handling
- Replace LocaleLayout/Header/Footer with Navigation component
- Add default

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -788,7 +788,30 @@
     "previewEmail": "Email Address",
     "previewTableCount": "Number of Tables",
     "previewCategory": "Restaurant Category",
-    "previewKeywords": "Keywords"
+    "previewKeywords": "Keywords",
+    "step2Title": "Add Your Restaurant Address Accurately",
+    "step2Subtitle": "So customers can easily reach you, give us the correct details of your location.",
+    "countryLabel": "Country / Region",
+    "countryPlaceholder": "Country / Region",
+    "countrySaudi": "Saudi Arabia",
+    "countryUAE": "United Arab Emirates",
+    "countryKuwait": "Kuwait",
+    "countryQatar": "Qatar",
+    "countryBahrain": "Bahrain",
+    "countryOman": "Oman",
+    "cityLabel": "City",
+    "cityPlaceholder": "City",
+    "cityRiyadh": "Riyadh",
+    "cityJeddah": "Jeddah",
+    "cityDammam": "Dammam",
+    "cityMecca": "Mecca",
+    "streetLabel": "Street Address",
+    "postalCodeLabel": "Postal Code",
+    "confirmLocation": "Confirm",
+    "editLocation": "Edit",
+    "pinLocation": "Pin your location on the map accurately",
+    "nextButton": "Next",
+    "locationValidationError": "Please complete all required fields"
   },
   "admin": {
     "claimsTitle": "Business Claims Review",
