--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -788,7 +788,30 @@
     "previewEmail": "البريد الإلكتروني",
     "previewTableCount": "عدد الطاولات",
     "previewCategory": "تصنيف مطعمك",
-    "previewKeywords": "الكلمات المفتاحية"
+    "previewKeywords": "الكلمات المفتاحية",
+    "step2Title": "أضف عنوان مطعمك بدقة",
+    "step2Subtitle": "عشان العملاء يقدرون يوصلون لك بسهولة، عطنا التفاصيل الصحيحة لموقعك.",
+    "countryLabel": "الدولة / المنطقة",
+    "countryPlaceholder": "الدولة / المنطقة",
+    "countrySaudi": "المملكة العربية السعودية",
+    "countryUAE": "الإمارات العربية المتحدة",
+    "countryKuwait": "الكويت",
+    "countryQatar": "قطر",
+    "countryBahrain": "البحرين",
+    "countryOman": "عمان",
+    "cityLabel": "البلدية",
+    "cityPlaceholder": "البلدية",
+    "cityRiyadh": "الرياض",
+    "cityJeddah": "جدة",
+    "cityDammam": "الدمام",
+    "cityMecca": "مكة المكرمة",
+    "streetLabel": "عنوان الشارع",
+    "postalCodeLabel": "الرقم البريدي",
+    "confirmLocation": "تأكيد",
+    "editLocation": "تعديل",
+    "pinLocation": "قم بتحديد موقعك على الخريطة بدقة",
+    "nextButton": "التالي",
+    "locationValidationError": "الرجاء إكمال جميع الحقول المطلوبة"
   },
   "admin": {
     "claimsTitle": "مراجعة طلبات الأعمال",
