``` refactor(business): update step 3 schedule form with Material-UI and remove fallback translations
- Replace custom form layout with Material-UI components (Box, TextField, Button, Typography, Switch)
- Remove fallback Arabic translations from all t() calls (rely on translation files)
- Update primary button color from #FF5630 to #ED614A with matching hover state
- Add locale state management with URL synchronization
- Replace LocaleLayout/Header/Footer with Navigation component
- Change form

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -811,7 +811,38 @@
     "editLocation": "Edit",
     "pinLocation": "Pin your location on the map accurately",
     "nextButton": "Next",
-    "locationValidationError": "Please complete all required fields"
+    "locationValidationError": "Please complete all required fields",
+    "step3Title": "Set Your Restaurant Working Hours",
+    "step3Subtitle": "Let your customers know when you're open and when you're busy or closed.",
+    "workingDay": "Working Day",
+    "addBreak": "Add Break",
+    "submitting": "Submitting...",
+    "submitRequest": "Submit Request",
+    "step4Title": "Add Your Restaurant Details",
+    "step4Subtitle": "This information will help your customers know more about you and what to expect from you.",
+    "completionRate": "Completion Rate",
+    "workingHoursComplete": "Working Hours",
+    "projectDescription": "Project Description",
+    "projectQuality": "Project Quality",
+    "placePhotos": "Place Photos",
+    "step4Description": "Our restaurant is distinguished by serving the most delicious Eastern and Western dishes at authentic cost and prepared by the most skilled chefs with a guarantee of a new and distinctive experience every time for excellence.",
+    "skipNow": "Skip Now",
+    "saveAndContinue": "Save and Continue",
+    "loading": "Loading...",
+    "preview": "Preview",
+    "onRestaurant": "On Restaurant",
+    "about": "About",
+    "step5Title": "A Few Touches to Add Your Identity",
+    "step5Subtitle": "Appearing professional to your customers reflects your professionalism and attention to every detail",
+    "logoImage": "Logo Image",
+    "uploadImage": "Upload Image",
+    "allowedFormats": "Allowed: *.jpeg, *.jpg, *.png, *.gif",
+    "maxFileSize": "Maximum size 3.1 MB",
+    "step6Title": "Add Place Photos",
+    "step6Subtitle": "Customers love to see your restaurant organized and tidy, always keep it elegant and worthy of your customers!",
+    "step7Title": "Ready to Launch!",
+    "step7Subtitle": "Your account and business are now being reviewed. Once approved, you will be notified and your business can appear publicly",
+    "goToDashboard": "Go to Dashboard"
   },
   "admin": {
     "claimsTitle": "Business Claims Review",
