--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -811,7 +811,38 @@
     "editLocation": "تعديل",
     "pinLocation": "قم بتحديد موقعك على الخريطة بدقة",
     "nextButton": "التالي",
-    "locationValidationError": "الرجاء إكمال جميع الحقول المطلوبة"
+    "locationValidationError": "الرجاء إكمال جميع الحقول المطلوبة",
+    "step3Title": "حدد أوقات عمل مطعمك",
+    "step3Subtitle": "حل عملائك يعرفون متى تفتح ومتى تكون مشغول او مقفل.",
+    "workingDay": "يوم عمل",
+    "addBreak": "إضافة فترة",
+    "submitting": "جاري الإرسال...",
+    "submitRequest": "إرسال الطلب",
+    "step4Title": "أضف تفاصيل مطعمك",
+    "step4Subtitle": "المعلومــات هذي بتساعد عملاءك يتعرفـــون عليك أكثر ويعرفـــون وش يميّـزك عن غيرك.",
+    "completionRate": "نسبة الإكتمال",
+    "workingHoursComplete": "ساعات العمل",
+    "projectDescription": "وصف المشروع",
+    "projectQuality": "جودة المشروع",
+    "placePhotos": "صور للمكان",
+    "step4Description": "تحدث عن مشروعك اكثر واهم ما يميزك...",
+    "skipNow": "تخطي الآن",
+    "saveAndContinue": "حفظ ومتابعة",
+    "loading": "جاري التحميل...",
+    "preview": "معاينة",
+    "onRestaurant": "على المطعم",
+    "about": "حول",
+    "step5Title": "بضعة لمسات لاضفاء هويتك",
+    "step5Subtitle": "الظهــور بمظهر احترافي أمام عملائك يعكس احترافيتك واهتمامك بكل تفصيلة",
+    "logoImage": "صورة الشعار",
+    "uploadImage": "تحميل صورة",
+    "allowedFormats": "مسموح: *.jpeg، *.jpg، *.png، *.gif",
+    "maxFileSize": "الحد الأقصى للحجم 3.1 ميغابايت",
+    "step6Title": "إضافة صور المكان",
+    "step6Subtitle": "العملاء يحبون ان يروا مطعمك منظم ومرتب اجعله دائماً أنيق يليق بعملائك!",
+    "step7Title": "الحين جاهز للانطلاق!",
+    "step7Subtitle": "يتم الآن مراجعة حسابك ونشاطك التجاري وعند قبول النشاط سيتم إعلامك وعندها يمكن لنشاطك التجاري الظهور للعامة",
+    "goToDashboard": "الانتقال إلى لوحة التحكم"
   },
   "admin": {
     "claimsTitle": "مراجعة طلبات الأعمال",
