feat(admin): add subscription information display to approved claim evidence dialog
- Import subscriptionService and Subscription/SubscriptionStatus types
- Add subscription state and loading state management
- Fetch active subscription data when opening evidence dialog for approved claims
- Add subscription information section with plan code, status chip, start/end dates, and subscription ID
- Implement subscription status text/color mapping functions with bilingual support
- Add subscription-

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -887,6 +887,17 @@
     "reviewedAt": "تاريخ المراجعة",
     "reviewedBy": "تمت المراجعة بواسطة",
     "latitude": "خط العرض",
-    "longitude": "خط الطول"
+    "longitude": "خط الطول",
+    "subscriptionInfo": "معلومات الاشتراك",
+    "planCode": "كود الخطة",
+    "startDate": "تاريخ البداية",
+    "endDate": "تاريخ الانتهاء",
+    "subscriptionId": "رقم الاشتراك",
+    "subscriptionActive": "نشط",
+    "subscriptionPastDue": "متأخر",
+    "subscriptionCanceled": "ملغي",
+    "subscriptionExpired": "منتهي",
+    "subscriptionUnspecified": "غير محدد",
+    "noActiveSubscription": "لا يوجد اشتراك نشط لهذا النشاط التجاري"
   }
 }
