--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -843,7 +843,41 @@
     "step6Subtitle": "العملاء يحبون ان يروا مطعمك منظم ومرتب اجعله دائماً أنيق يليق بعملائك!",
     "step7Title": "الحين جاهز للانطلاق!",
     "step7Subtitle": "يتم الآن مراجعة حسابك ونشاطك التجاري وعند قبول النشاط سيتم إعلامك وعندها يمكن لنشاطك التجاري الظهور للعامة",
-    "goToDashboard": "الانتقال إلى لوحة التحكم"
+    "goToDashboard": "الانتقال إلى لوحة التحكم",
+    "selectPlanTitle": "اختر خطة الاشتراك",
+    "selectPlanSubtitle": "اختر الخطة المناسبة لعملك",
+    "popular": "الأكثر شعبية",
+    "perMonth": "/شهر",
+    "freeTrial": "تجربة مجانية",
+    "days": "يوم",
+    "moreFeatures": "ميزة إضافية",
+    "back": "رجوع",
+    "continue": "متابعة",
+    "saving": "جاري الحفظ...",
+    "submissionError": "حدث خطأ",
+    "tryAgain": "حاول مرة أخرى"
+  },
+  "plans": {
+    "features": {
+      "menu.basic": "قائمة طعام أساسية",
+      "orders.limited": "طلبات محدودة",
+      "menu.max_items.50": "حتى 50 عنصر في القائمة",
+      "menu.max_categories.10": "حتى 10 فئات",
+      "orders.online_ordering": "طلبات أونلاين",
+      "menu.qr_code_generation": "رمز QR للقائمة",
+      "menu.max_items.200": "حتى 200 عنصر في القائمة",
+      "menu.max_categories.50": "حتى 50 فئة",
+      "menu.custom_branding": "علامة تجارية مخصصة",
+      "orders.delivery_integration": "تكامل مع خدمات التوصيل",
+      "analytics.reports": "تقارير تحليلية",
+      "analytics.custom_reports": "تقارير مخصصة",
+      "menu.unlimited": "عناصر قائمة غير محدودة",
+      "orders.unlimited": "طلبات غير محدودة",
+      "analytics.advanced": "تحليلات متقدمة",
+      "analytics.export_data": "تصدير البيانات",
+      "api.access": "وصول API",
+      "support.priority": "دعم ذو أولوية"
+    }
   },
   "admin": {
     "claimsTitle": "مراجعة طلبات الأعمال",
@@ -898,6 +932,8 @@
     "subscriptionCanceled": "ملغي",
     "subscriptionExpired": "منتهي",
     "subscriptionUnspecified": "غير محدد",
-    "noActiveSubscription": "لا يوجد اشتراك نشط لهذا النشاط التجاري"
+    "noActiveSubscription": "لا يوجد اشتراك نشط لهذا النشاط التجاري",
+    "selectedPlan": "الخطة المختارة",
+    "notSpecified": "غير محدد (طلب قديم)"
   }
 }
