feat(business): integrate TomTom Maps for location selection in step 2
- Added `@tomtom-international/web-sdk-maps` for interactive map functionality.
- Created `TomTomMapPicker` component for map rendering, address search, and marker placement.
- Updated step 2 page to utilize `TomTomMapPicker`, allowing users to select and confirm their location.
- Enhanced form state management to include formatted address from map interactions.
- Updated localization files for search address placeholder text.
- Documented integration details in `TOMTOM_MAPS_INTEGRATION.md`.

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -811,6 +811,7 @@
     "confirmLocation": "تأكيد",
     "editLocation": "تعديل",
     "pinLocation": "قم بتحديد موقعك على الخريطة بدقة",
+    "searchAddressPlaceholder": "ابحث عن عنوان...",
     "nextButton": "التالي",
     "locationValidationError": "الرجاء إكمال جميع الحقول المطلوبة",
     "step3Title": "حدد أوقات عمل مطعمك",
