feat(localization): add authentication action translations for Arabic and English
- Updated Arabic localization file to include translations for signIn, signUp, signOut, and logout actions.
- Updated English localization file to include translations for signIn, signUp, signOut, and logout actions.

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -17,6 +17,10 @@
       "cta": "اشترك الآن"
     },
     "actions": {
+      "signIn": "تسجيل الدخول",
+      "signUp": "إنشاء حساب",
+      "signOut": "تسجيل الخروج",
+      "logout": "تسجيل الخروج",
       "subscribe": "اشترك الآن",
       "contact": "تواصل معنا",
       "ClientPage": "سو إيت للعملاء",
