feat(assets): add new SVG icons for UI components
- Introduced new SVG icons: elements, email, eye, lock, and phone for enhanced user interface.
- These icons will be utilized across various components to improve visual consistency and user experience.

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -29,6 +29,32 @@
       "AdminPanel": "لوحة الإدارة"
     }
   },
+  "auth": {
+    "signInTitle": "تسجيل الدخول",
+    "signUpTitle": "إنشاء حساب",
+    "email": "البريد الإلكتروني",
+    "password": "كلمة المرور",
+    "confirmPassword": "تأكيد كلمة المرور",
+    "firstName": "الاسم الأول",
+    "lastName": "اسم العائلة",
+    "phoneNumber": "رقم الهاتف",
+    "forgotPassword": "نسيت كلمة المرور؟",
+    "signIn": "تسجيل الدخول",
+    "signUp": "إنشاء حساب",
+    "signingIn": "جاري تسجيل الدخول...",
+    "creating": "جاري إنشاء الحساب...",
+    "createAccount": "إنشاء حساب",
+    "noAccount": "ليس لديك حساب؟",
+    "alreadyHaveAccount": "لديك حساب بالفعل؟",
+    "or": "أو",
+    "loginFailed": "فشل تسجيل الدخول. تحقق من البريد الإلكتروني وكلمة المرور.",
+    "registrationFailed": "فشل التسجيل. يرجى المحاولة مرة أخرى.",
+    "networkError": "خطأ في الشبكة. يرجى المحاولة مرة أخرى.",
+    "passwordMismatch": "كلمات المرور غير متطابقة.",
+    "passwordTooShort": "يجب أن تكون كلمة المرور 8 أحرف على الأقل.",
+    "signUpSuccess": "تم إنشاء الحساب بنجاح! يرجى التحقق من بريدك الإلكتروني لتأكيد حسابك.",
+    "ok": "موافق"
+  },
   "clientPage": {
     "title": "سو إيت للعملاء",
     "subtitle": "حمل تطبيقنا المحمول واستمتع بأفضل تجربة مطعم",
